--- a/example.org
+++ b/example.org
@@ -13,6 +13,8 @@
 # in programming (specially the _)
 #+OPTIONS: ^:nil
 
+(the table of contents is automatically generated using :TOC: property, see emacs code)
+
 * Table of contents :TOC:
 - [[#demo][Demo]]
 - [[#github][Github]]
@@ -122,7 +124,9 @@ xyplot(1:10 ~ 1:10)
 ** Github can be used as a publishing platform
   - *simple publishing*: no need to export
   - it does a *great job rendering org* and code blocks
-  - *It is not perfect* (more on that later)
+  - *It is not perfect*
+    - by default it does not not show #+RESULTS (more on this later)
+    - same basic typesetting for code and results
 
 ** version control
   - obvious ;)
@@ -132,6 +136,7 @@ xyplot(1:10 ~ 1:10)
  - navigation links
  - cut-and-paste for code blocks
  - edit in place
+ - automatic scrollbars for long blocks and results
 
 ** *github* only shows the *#+RESULTS* if *:exports both*
   - but it does not respect *header-args*
@@ -398,12 +403,12 @@ print(list(map(square, range(1,10))))
 - Some programming characters are used by org
 - Tables
   - I have not found a way to create a table that contains the pipe |
-  - Some database results might contain | and mess the result
+  - Some database results might contain | and mess the rendering of the result
 
 Example: operators in C++:
 
-  | && | and |
-  |    | or  |
+  | && | and |                                                              |
+  |    | or  | no way to include a pipe without making it unreadable in org |
 
 * TODO remove
 
