--- a/example.org
+++ b/example.org
@@ -1,7 +1,8 @@
-#+STARTUP: showall
+#+STARTUP: overview
 #+TITLE: Example 
-# by default, the result of a block is standard output
+# make by default the result of a block its standard output
 #+PROPERTY: header-args         :results output
+# i like to be pedantic
 #+PROPERTY: header-args:C       :main no :flags -std=c99 -Wall --pedantic -Werror
 #  use C+++ instead of C++ (L+ means add arguments to language L)
 #+PROPERTY: header-args:C+++    :main no :flags -std=c++17 -Wall --pedantic -Werror
@@ -9,34 +10,97 @@
 # result:   guarantees the result is typeset as a table
 # colnames: orgmode does not insert column names, force it to do it
 #+PROPERTY: header-args:sqlite  :db /tmp/rip.db :colnames yes :results  table
-# make sure that ^ and _ does not get interpreted, since they are commonly used
-# in programming (specially the _)
+# make sure that ^ and _ do not get interpreted, since they are commonly used
+# in programming (specially _)
 #+OPTIONS: ^:nil
 
-(the table of contents is automatically generated using :TOC: property, see emacs code)
+(the table of contents is automatically generated using :TOC: property, see [[./dmg-org.org][emacs code]])
 
 * Table of contents :TOC:
+- [[#why-use-org-mode-for-teaching-programming][Why use org-mode for teaching programming?]]
+  - [[#limitations][Limitations]]
+  - [[#how-i-do-it][How I do it]]
+  - [[#my-advice][my advice]]
 - [[#demo][Demo]]
+  - [[#cc][C/C++]]
+  - [[#sql][SQL]]
+  - [[#python][Python]]
+  - [[#ruby][Ruby]]
+  - [[#r][R]]
 - [[#github][Github]]
-  - [[#github-can-be-used-as-a-publishing-platform][Github can be used as a publishing platform]]
+  - [[#publishing][publishing]]
   - [[#version-control][version control]]
   - [[#some-nitfy-features][some nitfy features]]
   - [[#github-only-shows-the-results-if-exports-both][*github* only shows the *#+RESULTS* if *:exports both*]]
 - [[#header-args][header-args]]
-  - [[#use-results-output][Use *:results output*]]
-- [[#c][C]]
+- [[#c-specific][C specific]]
   - [[#warning-and-errors][warning and errors]]
   - [[#using-main-yes][using :main yes]]
-- [[#c-1][C++]]
-- [[#sql][SQL]]
-- [[#python][Python]]
+- [[#c-specific-1][C++ specific]]
+- [[#sql-specific][SQL specific]]
+- [[#python-specific][Python specific]]
 - [[#advanced-org-features][Advanced org-features]]
 - [[#some-potential-issues-you-might-encounter][Some potential issues you might encounter]]
-- [[#remove][remove]]
+- [[#ignore][Ignore]]
 
+* Why use org-mode for teaching programming?
+
+- Source and text in one place
+- *More important*: easy to sync _source code and its output_
+- It is a /live/ format:
+  - it can be edited and run during the presentation
+- Very easy to do *on-the-fly* demonstrations
+  - create another org-file
+- Great typesetting of source code
+  - *keyword highlighting* for widely used programming languages
+- Github is a great publishing/collaboration platform
+  - *simple, automatic publishing*
+  - do you need a PDF? print the Github page.
+  - worst case, give the students org-files, they will figure it out
+- and you have the full power of *emacs*!!
+  - configure it to your own taste
+  - use yasnippets and macros
+
+** Limitations
+
+- It is not *powerpoint*
+  - no animations
+  - not trivial to annotate with a stylus
+
+** How I do it
+
+- I create *one* long *org file* per *lecture*
+- I scroll through it, like *movie credits*
+  - Students do not mind
+  - They *like that examples are complete and runnable*
+- I have successfully used it to teach:
+  - C++
+  - SQL
+  - SML
+  - Ruby
+  - Racket
+
+** my advice
+
+See my [[./dmg-org.org][configuration file]] and demo presentation (link to come).
+
+Some things that are important:
+  - *Typeset* the org-buffer so it is shown *as close as* it is meant *to be presented*
+  - *highlight* the *current line*
+  - set defaults for the properties of the language you are using
+  - use in tandem with *github* (not required, but makes life easier)
+  - use *yasnippets*
+  - make sure you can *easily change the fontsize*
+    - sometimes you need to show more/sometimes less
+  - *experiment!*
+  
 * Demo
 
-my main_function
+Some simple programming examples:
+
+** C/C++
+
+You can combine text with programming snippet. Once executed, its output is automatically inserted.
 
 #+begin_src C :exports both
 #include <stdio.h>
@@ -56,7 +120,7 @@ i : 1 2
 i : 2 4
 #+end_example
 
-First some examples of use:
+** SQL
 
 #+begin_src sqlite :exports both
 select * from R;
@@ -68,6 +132,8 @@ select * from R;
 | 1 | test     |
 | 2 | example  |
 | 3 | one more |
+
+** Python
 
 #+begin_src python :exports both
 l = range (0,3)
@@ -81,6 +147,8 @@ list(map(print, map(lambda i: (i,2**i), l)))
 (2, 4)
 #+end_example
 
+** Ruby
+
 #+begin_src ruby :exports both
 l = Array.new(3) {|i| [i,2**i]}
 l.map { |p| print(p, "\n")}
@@ -92,6 +160,10 @@ l.map { |p| print(p, "\n")}
 [1, 2]
 [2, 4]
 #+end_example
+
+** R
+
+R can output text or graphics. 
 
 #+begin_src R :exports both
 attach(mtcars)
@@ -109,9 +181,9 @@ summary(mtcars)
  Max.   :34   Max.   :8.0   Max.   :472   Max.   :335   Max.   :4.9   Max.   :5.4   Max.   :22.9   Max.   :1.00   Max.   :1.00   Max.   :5.0   Max.   :8.0  
 #+end_example
 
-It can even output graphics. Make sure to set *org-toggle-inline-images* to not nil
+It will automatically insert them. Make sure to run *org-toggle-inline-images* to not nil
 
-#+begin_src R :file testR.png :results output graphics file
+#+begin_src R :file testR.png :results output graphics file 
 library(lattice)
 xyplot(1:10 ~ 1:10)
 #+end_src
@@ -121,15 +193,20 @@ xyplot(1:10 ~ 1:10)
 
 * Github
 
-** Github can be used as a publishing platform
+Github is a great resource:
+
+** publishing
   - *simple publishing*: no need to export
-  - it does a *great job rendering org* and code blocks
+  - it does a *great job rendering source code* blocks
+  - github will display the file with *different colors and typesetting* than in emacs
+  - but it will *nicely typeset the file* nonetheless
   - *It is not perfect*
-    - by default it does not not show #+RESULTS (more on this later)
-    - same basic typesetting for code and results
+    - by default it does not show #+RESULTS (more on this later)
+    - it does not support all org-mode features
 
 ** version control
-  - obvious ;)
+  - git, obvious ;)
+  - easy to collaborate with co-authors
   - you can get pull requests
 
 ** some nitfy features
@@ -141,8 +218,6 @@ xyplot(1:10 ~ 1:10)
 ** *github* only shows the *#+RESULTS* if *:exports both*
   - but it does not respect *header-args*
   - instead, you have to manually add it to each block
-  - github will display the file with *different colors and typesetting*
-  - but it will *nicely typeset the file* nonetheless
 
 This block does not export its output, and github does not display it
 
@@ -168,13 +243,11 @@ int main(void) {
 }
 #+end_src
 
-
-
 * header-args
 
 Using *header-args* will reduce the amount of information you have to include in every block header (see top of this file)
 
-** Use *:results output*
+Use *:results output*
 
 #+begin_example
 #+PROPERTY: header-args         :results output
@@ -207,7 +280,7 @@ Changing it to *:results output* keeps *standard output*:
 "this is a test"
 #+end_example
 
-* C
+* C specific
 
 #+begin_example
 #+PROPERTY: header-args:C       :main no :flags -std=c99 -Wall --pedantic -Werror
@@ -265,7 +338,7 @@ The result is 3
 #+end_example
 
 
-* C++
+* C++ specific
 
 Very similar to C.
 
@@ -291,7 +364,7 @@ else
 They are not
 #+end_example
 
-* SQL
+* SQL specific
 
 - You can use any of the *major backends*.
 - Each has different PROPERTY parameters
@@ -328,7 +401,7 @@ select * from R;
 | 3 | one more |
 
 
-* Python
+* Python specific
 
 You can specify the version of python you want to run using the variable *org-babel-python-command* (see configuration file)
 
@@ -365,8 +438,7 @@ print(list(map(square, range(1,10))))
 * Advanced org-features
 
 Of course you can use advanced org-features, but remember that
-students might be confused, since they a are learning programming, not
-org-mode
+students might be confused, since they will not be able to cut-and-paste the snippet.
 
 #+name: square
 #+begin_src python
@@ -374,22 +446,12 @@ def square(x):
     return x*x
 #+end_src
 
-#+begin_src python   :exports both :noweb yes
-<<square>>
-print(list(map(square, range(1,10))))
-#+end_src
-
-#+RESULTS:
-#+begin_example
-[1, 4, 9, 16, 25, 36, 49, 64, 81]
-#+end_example
-
 - so make sure you *warn them*
 
 #+begin_src python   :exports both :noweb yes
 <<square>> # this is not Python! this is emacs
            # it inserts the blocked name square (see above)
-           # here
+           # here. i used to avoid duplicating code
 print(list(map(square, range(1,10))))
 #+end_src
 
@@ -398,21 +460,30 @@ print(list(map(square, range(1,10))))
 [1, 4, 9, 16, 25, 36, 49, 64, 81]
 #+end_example
 
+
 * Some potential issues you might encounter
 
 - Some programming characters are used by org
 
-- Example: operators in C/C++:
+- _ is the biggest issue, use the following in the header so it is exported properly:
 
-  | operator | meaning | note                                                         |
-  |----------+---------+--------------------------------------------------------------|
-  | &&       | and     |                                                              |
-  |          | or      | no way to include a pipe without making it unreadable in org |
+#+begin_example
+#+OPTIONS: ^:nil
+#+end_example
+
+- | (pipe character): eg | and || operators in C/C++
+
+  | operator | meaning | note                                                                 |
+  |----------+---------+----------------------------------------------------------------------|
+  | &&       | and     |                                                                      |
+  |          | or      | no way to include a pipe symbol without making it unreadable in org  |
 
 - Some database results might contain | and mess the rendering of the result
 
 
-* TODO remove
+* Ignore
+
+I frequently leave some code I need to run in this buffer at the end that I need to run during the presentation
 
 #+begin_src emacs-lisp
 (setq left-margin-width 10)
@@ -421,3 +492,5 @@ print(list(map(square, range(1,10))))
 #+end_src
 
 #+RESULTS:
+
+
