--- a/example.org
+++ b/example.org
@@ -31,7 +31,7 @@
   - [[#publishing][publishing]]
   - [[#version-control][version control]]
   - [[#some-nitfy-features][some nitfy features]]
-  - [[#github-only-shows-the-results-if-exports-both][*github* only shows the *#+RESULTS* if *:exports both*]]
+  - [[#warning-github-only-shows-the-results-if-exports-both][warning: *github* only shows the *#+RESULTS* if *:exports both*]]
 - [[#header-args][header-args]]
 - [[#c-specific][C specific]]
   - [[#warning-and-errors][warning and errors]]
@@ -181,7 +181,9 @@ summary(mtcars)
  Max.   :34   Max.   :8.0   Max.   :472   Max.   :335   Max.   :4.9   Max.   :5.4   Max.   :22.9   Max.   :1.00   Max.   :1.00   Max.   :5.0   Max.   :8.0  
 #+end_example
 
-It will automatically insert them. Make sure to run *org-toggle-inline-images* to not nil
+It will automatically insert them.
+- Make sure to run *org-toggle-inline-images* to not nil
+- Unfortunately github does not render it in-place
 
 #+begin_src R :file testR.png :results output graphics file  :exports both
 library(lattice)
@@ -215,7 +217,7 @@ Github is a great resource:
  - edit in place
  - automatic scrollbars for long blocks and results
 
-** *github* only shows the *#+RESULTS* if *:exports both*
+** warning: *github* only shows the *#+RESULTS* if *:exports both*
   - but it does not respect *header-args*
   - instead, you have to manually add it to each block
 
