--- a/index.org
+++ b/index.org
@@ -198,6 +198,7 @@ Github is a great resource:
 
 ** publishing
   - *simple publishing*: no need to export
+    - *index.org* will be rendered as the main entry point of a repo if no *index.md* found
   - it does a *great job rendering source code* blocks
   - github will display the file with *different colors and typesetting* than in emacs
   - but it will *nicely typeset the file* nonetheless
