--- a/readme.org
+++ b/readme.org
@@ -55,13 +55,10 @@ This is a 20 minute presentation on why use emacs and org-mode to teach programm
 Test 12d
 #+END_EXPORT
 
-#+HTML: <p style="border: 1px dotted grey">neato!</p>
+#+HTML: <iframe loading="lazy" width="560" height="315" src="https://youtu.be/tSYL-ricWLg" title="Teaching Programming with Emacs and Org-mode" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
-@@html:
-Test
-<iframe loading="lazy" width="560" height="315" src="https://youtu.be/tSYL-ricWLg" title="Teaching Programming with Emacs and Org-mode" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
-@@
+
 
 * How to use
 
