--- a/readme.org
+++ b/readme.org
@@ -55,9 +55,12 @@ This is a 20 minute presentation on why use emacs and org-mode to teach programm
 Test 12d
 #+END_EXPORT
 
-#+HTML: <iframe loading="lazy" width="560" height="315" src="https://youtu.be/tSYL-ricWLg" title="Teaching Programming with Emacs and Org-mode" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+#+HTML:<iframe width="420" height="315" src="https://youtu.be/tSYL-ricWLg"></iframe>
 
-<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+#+HTML:<iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+
+ <iframe loading="lazy" width="560" height="315" src="" title="Teaching Programming with Emacs and Org-mode" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+
 
 
 * How to use
