--- a/readme.org
+++ b/readme.org
@@ -55,7 +55,7 @@ This is a 20 minute presentation on why use emacs and org-mode to teach programm
 Test 12d
 #+END_EXPORT
 
-#+HTML:<iframe width="420" height="315" src="https://youtu.be/tSYL-ricWLg"></iframe>
+#+HTML:<iframe width="420" height="315" src="https://youtu.be/tSYL-ricWLg"></iframe><p>This is a </p>
 
 #+HTML:<iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
 
